# labor_force_analysis_new

./: README.md  laborforce_Analysisgaba.ipynb  pyproject.toml
src/laborforce_analysis/: EDA.py  data_summary.py  question_analysis.py
