[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "labor_force_analysis_new"
authors = [
    {name = "Ziqi Huang", email = "zikih25@gmail.com"}
]
maintainers = [
    {name = "Ziqi Huang", email = "zikih25@gmail.com"},
]
description = "A Python package for labor force analysis prediction"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.3",
    "numpy>=1.15.2",
    "pandas>=0.23.4",,
    "seaborn>=0.11.0",
    “
]
version="2.0"

[project.urls]
Repository = "https://github.com/Francesgaba/labor_force_analysis_new.git"

[tool.setuptools.packages.find]
where = ["src"]